# yaml-rpc

./: .gitignore  Caller.hs  Derive.hs  Dispatcher.hs  Makefile  Methods.hs  README  README.md  Server.hs  TODO  Test.hs  TestAPI.hs  TestAPIImpl.hs  TestCall.hs  TestDerive.hs  TestGen.hs  TestScotty.hs  TestTypes.hs  YAML.hs  YAMLInstances.hs  test.api  yaml-rpc.cabal
Network/: YAML.hs
Network/YAML/: API.hs  Balancer.hs  Base.hs  Caller.hs  Derive.hs  Dispatcher.hs  Instances.hs  Server.hs  Types.hs  WrapMethods.hs
Network/YAML/TH/: Client.hs  Dispatcher.hs  Server.hs
Test/: Client.hs  Server.hs  TestAPI.hs  TestAPIImpl.hs
yaml-rpc-scotty/: yaml-rpc-scotty.cabal
yaml-rpc-scotty/Network/YAML/: Scotty.hs
yaml-rpc-scotty/Test/: Server.hs  TestAPIImpl.hs
yaml-rpc-snap/: yaml-rpc-snap.cabal  yaml-rpc-snap.hs
yaml-rpc-snap/Network/YAML/: Snap.hs
yaml-rpc-snap/Test/: Server.hs  TestAPIImpl.hs
