Name:                yaml-rpc-scotty

Version:             1.0

Synopsis:            Scotty server backend for yaml-rpc
Homepage:            http://redmine.iportnov.ru/projects/yaml-rpc
License-file:        LICENSE
Author:              Ilya V. Portnov
Maintainer:          portnov84@rambler.ru
Category:            Network
Build-type:          Simple
Cabal-version:       >= 1.8

Library
  Exposed-modules:   Network.YAML.Scotty
  Build-depends:       base >= 3 && <= 5,
                       transformers >= 0.3.0.0,
                       aeson >= 0.7.0.3,
                       yaml,
                       containers,
                       text >= 1.1.1.3,
                       http-types >= 0.8.5,
                       scotty >= 0.8.0,
                       yaml-rpc >= 1.0

  Other-modules:     Test.Server,
                     Test.TestAPIImpl
